fixed some spacing issues on desktop version

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* height: 100vh;
-    width: 100vw; */
+    min-height: 100vh;
     background-color: var(--very-dark-blue);
 }
 
@@ -49,6 +48,8 @@ ul {
     grid-row: 1 / span 2;
     grid-column: 1;
     margin-bottom: 50px;
+    min-height: 450px;
+    max-width: 8vw;
 }
 
 #user-card-bottom {
@@ -58,6 +59,14 @@ ul {
     padding: 1rem;
     margin-right: 2rem;
     margin-top: -1rem;
+}
+
+#user-card-bottom ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2vw;
 }
 
 
